[package]
name = "metriful"
description = "A library and set of utilities for Metriful MS430 indoor environment sensors"
keywords = ["sensor", "metriful", "prometheus", "raspberry-pi"]
version = "0.1.0"
authors = ["Tim Buckley <timothyb89@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/timothyb89/metriful/"
repository = "https://github.com/timothyb89/metriful/"
exclude = ["/etc/**/*", "/Dockerfile.*", "**/*.pdf"]

[dependencies]
# base requirements
i2cdev = "0.4"
sysfs_gpio = "0.5"
bytes = "0.5"
err-derive = "0.2"
lazy_static = "1.4"
log = "0.4"
textwrap = "0.13"
chrono = "0.4"

# requirements for all bins
color-eyre = { version = "0.5", optional = true, default-features = false, features = ["track-caller"] }
env_logger = { version = "0.7", optional = true }
structopt = { version = "0.3", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true}
serde_json = { version = "1.0", optional = true }

# requirements for exporter
warp = { version = "0.2", optional = true }
tokio = { version = "0.2", features = ["macros"], optional = true }
simple-prometheus-exporter = { git = "https://github.com/timothyb89/simple-prometheus-exporter-rs", tag = "v0.1.0", optional = true }

[features]
default = []

bin = ["env_logger", "color-eyre", "structopt", "serde", "serde_json"]
exporter = ["warp", "tokio", "simple-prometheus-exporter"]

[[bin]]
name = "metriful-exporter"
path = "src/bin/metriful_exporter.rs"
required-features = ["bin", "exporter"]

[[bin]]
name = "metriful-tool"
path = "src/bin/metriful_tool.rs"
required-features = ["bin"]
